# swagger_server/models/__init__.py
@@ -3,4 +3,5 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from swagger_server.models.add_banner_body import AddBannerBody
 from swagger_server.models.banner import Banner
